puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Subscriptions/content/Controllers/Users/UsersController.Subscriptions.cs.pp
using System.Web.Mvc;

namespace $rootnamespace$.Controllers.Users
{
    public partial class UsersController
    {
        public ActionResult Subscriptions(int page = 1, int pageSize = 10)
        {
            return View();
        }
    }
}
